--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     ]
   },
   "devDependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "axios": "^0.19.2"
   }
 }
